--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         // === CONFIGURATION ===
         // Replace this URL with your Google Sheets CSV export URL
-        const GOOGLE_SHEETS_CSV_URL = 'YOUR_GOOGLE_SHEETS_CSV_URL_HERE';
+        const GOOGLE_SHEETS_CSV_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vTLgbPERWCi-ui5PXYz7naVax8vGnmsPH9aL9Lklmlr4FEZMQWBYneo3L1VptYBn4VGeEbw_bOQ8tk8/pub?gid=1554681719&single=true&output=csv';
         
         // To get your CSV URL:
         // 1. Create a Google Sheet with your recipes
